<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:title="@string/map_menu_title"
        android:icon="@drawable/ic_baseline_map_24"/>
    <item
        android:id="@+id/list"
        android:title="@string/list_menu_title"
        android:icon="@drawable/ic_baseline_view_list_24"/>
    <item
        android:id="@+id/workmates"
        android:title="@string/workmates_menu_title"
        android:icon="@drawable/ic_baseline_people_24"/>

</menu>