...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/frame_layout">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
...
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button2"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:backgroundTint="@color/app_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_title" />
...
