...
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_restaurant_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:tintMode="src_in"
        android:src="@drawable/ic_choose_waiting"
        app:borderWidth="0dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="etoile_favoris"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_layout"
        app:layout_constraintVertical_bias="0.695"
        android:focusable="true" />

...
